fix: Complete Azure CSRF 419 error solution
✅ Created TrustProxies middleware with Azure compatibility:
   - Trust all proxies ($proxies = '*')
   - Handle all forwarded headers for Azure load balancer

✅ Updated session configuration:
   - Default secure cookies to true
   - Maintain 'lax' same-site policy

✅ Enhanced nginx FastCGI configuration:
   - Force HTTPS protocol forwarding
   - Proper proxy header handling for Azure
   - Fixed port forwarding (443 for HTTPS)

✅ Created configure-azure-csrf.php script:
   - Sets APP_URL to Azure domain
   - Configures SESSION_DOMAIN for Azure
   - Enables secure cookies
   - Clears and refreshes all caches

✅ Updated startup.sh integration:
   - Runs Azure CSRF configuration
   - Preserves existing URL routing fixes
   - Maintains HTTPS redirect functionality

This implements the complete Azure-specific CSRF solution to resolve
419 errors on /login and /register form submissions while preserving
all existing functionality (URL routing, HTTPS, static assets).

--- a/nginx.conf
+++ b/nginx.conf
@@ -107,12 +107,12 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
 
-        # HTTPS parameters for Laravel (Fix #2 from your suggestion - CRITICAL for forms!)
+        # HTTPS parameters for Laravel (Enhanced for Azure load balancer)
         fastcgi_param HTTPS on;
-        fastcgi_param HTTP_X_FORWARDED_PROTO $http_x_forwarded_proto;
-        fastcgi_param HTTP_X_FORWARDED_FOR $http_x_forwarded_for;
-        fastcgi_param HTTP_X_FORWARDED_HOST $http_x_forwarded_host;
-        fastcgi_param HTTP_X_FORWARDED_PORT $http_x_forwarded_port;
+        fastcgi_param HTTP_X_FORWARDED_PROTO https;
+        fastcgi_param HTTP_X_FORWARDED_FOR $proxy_add_x_forwarded_for;
+        fastcgi_param HTTP_X_FORWARDED_HOST $host;
+        fastcgi_param HTTP_X_FORWARDED_PORT 443;
 
         # Performance settings
         fastcgi_connect_timeout 60s;
