--- a/nginx.conf
+++ b/nginx.conf
@@ -46,11 +46,27 @@ server {
         access_log off;
     }
 
-    # Livewire assets (with shorter cache time)
+    # Livewire dynamic requests (AJAX endpoints like /livewire/update)
+    location ~ ^/livewire/(update|message|upload) {
+        # These are dynamic Livewire endpoints - route to Laravel
+        try_files $uri /index.php?$query_string;
+    }
+
+    # Livewire static assets (JS, CSS files)
     location ^~ /livewire/ {
+        # First try to serve static files directly
+        try_files $uri @livewire_fallback;
+
+        # Cache static Livewire assets
         expires 1d;
         add_header Cache-Control "public";
-        try_files $uri =404;
+        access_log off;
+    }
+
+    # Fallback for Livewire requests that aren't static files
+    location @livewire_fallback {
+        # Route to Laravel for dynamic Livewire requests
+        try_files $uri /index.php?$query_string;
     }
 
     # Storage files (Laravel storage symlink)
